# My_FlaskTours

./: main.py  models.py  pyproject.toml
data/: data.py  forms.py  tours_to_db.py
templates/: base.html  cabinet.html  departure.html  index.html  login.html  navigation.html  signup.html  tour.html
